--- a/index.html
+++ b/index.html
@@ -37,16 +37,16 @@
             <div class="col-lg-9">
                 <div id="carouselExampleInterval" class="carousel-slide" data-ride="carousel">
                     <div class="carousel-inner">
-                        <div class="carousel-item active" data-interval="10000">
+                        <div class="carousel-item active" data-interval="2000">
                             <img src="https://cs5.pikabu.ru/post_img/big/2015/12/14/1/1450045251155268373.jpg"
                                 class="d-block w-100" alt="...">
                         </div>
                         <div class="carousel-item" data-interval="2000">
                             <img src="https://i.imgur.com/zuBQM3E.jpg" class="d-block w-100" alt="...">
                         </div>
-                        <div class="carousel-item">
-                            <img src="https://storge.pic2.me/cm/5120x2880/928/5259ec1cb4a9b.jpg" class="d-block w-100"
-                                alt="...">
+                        <div class="carousel-item" data-interval="2000">
+                            <img src="https://p4.wallpaperbetter.com/wallpaper/534/619/592/woman-motorcycle-tattoos-tools-wallpaper-bb4fe57578c84f6d06738f4237ae2856.jpg" 
+                            class="d-block w-100"  alt="...">
                         </div>
                     </div>
                     <a class="carousel-control-prev" href="#carouselExampleInterval" role="button" data-slide="prev">
