--- a/curriculum.html
+++ b/curriculum.html
@@ -1,27 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/curriculum.css">
     <title>Document</title>
 </head>
+
 <body>
     <!--init center-->
     <div class="container-fluid">
         <div class="row">
             <div class="col-lg-3">
                 <div class="icon">
-                    <img src="./boat-8-256.png"/>                    
+                    <img src="./boat-8-256.png" />
                 </div>
-
                 <div class="info">
                     <h2>ExampleName</h2>
                     <h4>your country</h4>
                 </div>
-                <div info_extra>
+                <div class="info_extra">
                     <nav>
                         <ul>
                             <li><a href="index.html">home</a></li>
@@ -32,33 +33,21 @@
                     </nav>
 
                 </div>
-
-            </div>
+            </div>                   
             <div class="col-lg-9">
-                <div id="carouselExampleInterval" class="carousel-slide" data-ride="carousel">
-                    <div class="carousel-inner">
-                        <div class="carousel-item active" data-interval="500">
-                            <img src="https://cs5.pikabu.ru/post_img/big/2015/12/14/1/1450045251155268373.jpg"
-                                class="d-block w-100" alt="...">
-                        </div>
-                        <div class="carousel-item" data-interval="500">
-                            <img src="https://i.imgur.com/zuBQM3E.jpg" class="d-block w-100" alt="...">
-                        </div>
-                        <div class="carousel-item" data-interval="500">
-                            <img src="https://p4.wallpaperbetter.com/wallpaper/534/619/592/woman-motorcycle-tattoos-tools-wallpaper-bb4fe57578c84f6d06738f4237ae2856.jpg" 
-                            class="d-block w-100"  alt="...">
-                        </div>
-                    </div>
-                    <a class="carousel-control-prev" href="#carouselExampleInterval" role="button" data-slide="prev">
-                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                        <span class="sr-only">Previous</span>
-                    </a>
-                    <a class="carousel-control-next" href="#carouselExampleInterval" role="button" data-slide="next">
-                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                        <span class="sr-only">Next</span>
-                    </a>
-                </div>
+               <div class="img">
+                   <h2>My love Profission </h2>                   
+               </div>
+               <div class="jumbotron">
+                <h2>movies</h2>
+                <p class="lead">Este é um simples exemplo para ilustrar como navbars fixos ao topo funcionam. Com isso, você verá que enquanto rola a página o navbar permanecerá fixo, ao topo da viewport de seu browser.</p>               
+              </div>
+              <div class="jumbotron">
+                <h2>fashion shows</h2>
+                <p class="lead">Este é um simples exemplo para ilustrar como navbars fixos ao topo funcionam. Com isso, você verá que enquanto rola a página o navbar permanecerá fixo, ao topo da viewport de seu browser.</p>               
+              </div>
             </div>
+        
         </div>
     </div>
     <!--end center-->
