--- a/curriculum.html
+++ b/curriculum.html
@@ -15,6 +15,7 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col-lg-3">
+                <div class="traso-vert"></div>
                 <div class="icon">
                     <img src="./boat-8-256.png" />
                 </div>
