organizar pasta img

--- a/curriculum.html
+++ b/curriculum.html
@@ -17,7 +17,7 @@
             <div class="col-lg-3">
                 <div class="traso-vert"></div>
                 <div class="icon">
-                    <img src="./boat-8-256.png" />
+                    <img src="./img/boat-8-256.png" />
                 </div>
                 <div class="info">
                     <h2>ExampleName</h2>
