--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class="row">
             <div class="col-lg-3">
                 <div class="icon">
-                    <img src="./boat-8-256.png"/>                    
+                    <img src="./img/boat-8-256.png"/>                    
                 </div>
 
                 <div class="info">
