--- a/curriculum.html
+++ b/curriculum.html
@@ -41,11 +41,11 @@
                </div>
                <div class="jumbotron">
                 <h2>movies</h2>
-                <p class="lead">Este é um simples exemplo para ilustrar como navbars fixos ao topo funcionam. Com isso, você verá que enquanto rola a página o navbar permanecerá fixo, ao topo da viewport de seu browser.</p>               
+                <p class="lead">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable.</p>               
               </div>
               <div class="jumbotron">
                 <h2>fashion shows</h2>
-                <p class="lead">Este é um simples exemplo para ilustrar como navbars fixos ao topo funcionam. Com isso, você verá que enquanto rola a página o navbar permanecerá fixo, ao topo da viewport de seu browser.</p>               
+                <p class="lead">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old.</p>               
               </div>
             </div>
         
