acerto de imagens e textos

--- a/contacts.html
+++ b/contacts.html
@@ -37,15 +37,17 @@
                 </div>
             </div>                   
             <div class="col-lg-9">
+                <div class="imgs">
                <div class="img">
                    <h2>Love</h2>                   
                </div>
                <div class="img-2">
-                   <h2>Love</h2>                   
+                   <h2>happy</h2>                   
                </div>
                <div class="img-3">
-                   <h2>Love</h2>                   
+                   <h2>delicate</h2>                   
                </div>
+            </div>
                <div class="jumbotron">
                 <h2>movies</h2>
                 <p class="lead">t is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>               
