acerto de imagense conta

--- a/contacts.html
+++ b/contacts.html
@@ -14,7 +14,7 @@
     <!--init center-->
     <div class="container-fluid">
         <div class="row">
-            
+
             <div class="col-lg-3">
                 <div class="traso-vert"></div>
                 <div class="icon">
@@ -35,29 +35,37 @@
                     </nav>
 
                 </div>
-            </div>                   
+            </div>
             <div class="col-lg-9">
                 <div class="imgs">
-               <div class="img">
-                   <h2>Love</h2>                   
-               </div>
-               <div class="img-2">
-                   <h2>happy</h2>                   
-               </div>
-               <div class="img-3">
-                   <h2>delicate</h2>                   
-               </div>
+                    <div class="img">
+                        <h2>Love</h2>
+                    </div>
+                    <div class="img-2">
+                        <h2>happy</h2>
+                    </div>
+                    <div class="img-3">
+                        <h2>delicate</h2>
+                    </div>
+                </div>
+                <div class="jumbotron">
+                    <h2>my measurements</h2>
+
+                    <p>bust - 90 centimeters</p>
+                    <p>waist - 72 centimeters</p>
+                    <p>hip - 98 centimeters </p>
+                    <p>height up to the neck - 150 centimeters</p>
+                    <p>height - 170 centimeters</p>
+                </div>
+                <div class="jumbotron">
+                    <h2>My contacts</h2>
+                    <p>telephone</p>
+                    <p>email</p>
+                    <p>agency</p>   
+                    <a href="https://www.instagram.com/?hl=pt-br" target="_blank"> <img src="./img/instagram-5-256.png" alt="" style="height:80px; width:80px;float:right; margin:-96px 390px 0px 0px; opacity:25%;"> <a>                 
+                </div>
             </div>
-               <div class="jumbotron">
-                <h2>movies</h2>
-                <p class="lead">t is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>               
-              </div>
-              <div class="jumbotron">
-                <h2>fashion shows</h2>
-                <p class="lead">is simply dummy text of the printing and typesetting industry.</p>               
-              </div>
-            </div>
-        
+
         </div>
     </div>
     <!--end center-->
