--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col-lg-3">
+                <div class="traso-vert"></div>
                 <div class="icon">
                     <img src="./img/boat-8-256.png" />
                 </div>
