formantando para resposivo para telas  414 X 736

--- a/contacts.html
+++ b/contacts.html
@@ -15,7 +15,7 @@
     <div class="container-fluid">
         <div class="row">
 
-            <div class="col-lg-3">
+            <div class="col-lg-3 col-12">
                 <div class="traso-vert"></div>
                 <div class="icon">
                     <img src="./img/boat-8-256.png" />
@@ -36,7 +36,7 @@
 
                 </div>
             </div>
-            <div class="col-lg-9">
+            <div class="col-lg-9 col-12">
                 <div class="imgs">
                     <div class="img">
                         <h2>Love</h2>
@@ -50,7 +50,6 @@
                 </div>
                 <div class="jumbotron">
                     <h2>my measurements</h2>
-
                     <p>bust - 90 centimeters</p>
                     <p>waist - 72 centimeters</p>
                     <p>hip - 98 centimeters </p>
@@ -62,7 +61,7 @@
                     <p>telephone</p>
                     <p>email</p>
                     <p>agency</p>   
-                    <a href="https://www.instagram.com/?hl=pt-br" target="_blank"> <img src="./img/instagram-5-256.png" alt="" style="height:80px; width:80px;float:right; margin:-96px 390px 0px 0px; opacity:25%;"> <a>                 
+                    <a href="https://www.instagram.com/?hl=pt-br" target="_blank"> <img src="./img/instagram-5-256.png" alt=""> <a>                 
                 </div>
             </div>
 
