--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <!--init center-->
     <div class="container-fluid">
         <div class="row">
-            <div class="col-lg-3">
+            <div class="col-lg-3 col-12">
                 <div class="traso-vert"></div>
                 <div class="icon">
                     <img src="./img/boat-8-256.png" />
@@ -25,7 +25,7 @@
                     <h2>ExampleName</h2>
                     <h4>your country</h4>
                 </div>
-                <div info_extra>
+                <div class="info_extra">
                     <nav>
                         <ul>
                             <li><a href="index.html">home</a></li>
@@ -38,7 +38,7 @@
                 </div>
 
             </div>
-            <div class="col-lg-9">
+            <div class="col-lg-9 col-12">
                 <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
                     <div class="carousel-inner">
                       <div class="carousel-item active">
