--- a/work.html
+++ b/work.html
@@ -15,7 +15,7 @@
     <div class="container-fluid">
         <div class="row">
             
-            <div class="col-lg-3">
+            <div class="col-lg-3 col-12">
                 <div class="traso-vert"></div>
                 <div class="icon">
                     <img src="./img/boat-8-256.png" />
@@ -36,7 +36,7 @@
 
                 </div>
             </div>                   
-            <div class="col-lg-9">
+            <div class="col-lg-9 col-12">
                <div class="img">
                    <h2></h2>                   
                </div>
