--- a/curriculum.html
+++ b/curriculum.html
@@ -14,7 +14,7 @@
     <!--init center-->
     <div class="container-fluid">
         <div class="row">
-            <div class="col-lg-3">
+            <div class="col-lg-3 col-12">
                 <div class="traso-vert"></div>
                 <div class="icon">
                     <img src="./img/boat-8-256.png" />
@@ -35,7 +35,7 @@
 
                 </div>
             </div>                   
-            <div class="col-lg-9">
+            <div class="col-lg-9 col-12">
                <div class="img">
                    <h2>My love Profission </h2>                   
                </div>
